top stats effects on hover

--- a/source/main.html
+++ b/source/main.html
@@ -287,158 +287,170 @@
                     NAGOYA
                   </h3>
                   <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
+                    <span class="top__card-likes-value">221</span>
+                    <svg width="16" height="16" class="top__card-svg">
+                      <use xlink:href="img/sprite.svg#heart-ico" />
+                      </svg>
+                    </div>
+                    <div class="top__card-comments">
+                      <span class="top__card-comments-value">50</span>
+                      <svg width="14" height="14" class="top__card-svg">
+                        <use xlink:href="img/sprite.svg#comment-ico" />
+                        </svg>
+                      </div>
+                    </div>
                   </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
+                  <p class="top__card-desc">
+                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                  </p>
+                  <a href="#!" class="top__card-more btn">SEE MORE</a>
                 </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
 
-            <div class="top__card">
-              <div class="top__card-pic">
-                <a href="#!" class="top__card-link"></a>
-                <img src="./img/top-pic-2.jpg" alt="NIIGATA" class="top__card-thumb">
-                <div class="top__card-stats">
-                  <h3 class="top__card-title">
-                    NIIGATA
-                  </h3>
-                  <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
-                  </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
+                <div class="top__card">
+                  <div class="top__card-pic">
+                    <a href="#!" class="top__card-link"></a>
+                    <img src="./img/top-pic-2.jpg" alt="NIIGATA" class="top__card-thumb">
+                    <div class="top__card-stats">
+                      <h3 class="top__card-title">
+                        NIIGATA
+                      </h3>
+                      <div class="top__card-likes">
+                        <span class="top__card-likes-value">221</span>
+                        <svg width="16" height="16" class="top__card-svg">
+                          <use xlink:href="img/sprite.svg#heart-ico" />
+                          </svg>
+                        </div>
+                        <div class="top__card-comments">
+                          <span class="top__card-comments-value">50</span>
+                          <svg width="14" height="14" class="top__card-svg">
+                            <use xlink:href="img/sprite.svg#comment-ico" />
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                      <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                      </p>
+                      <a href="#!" class="top__card-more btn">SEE MORE</a>
+                    </div>
 
-            <div class="top__card">
-              <div class="top__card-pic">
-                <a href="#!" class="top__card-link"></a>
-                <img src="./img/top-pic-3.jpg" alt="OSAKA" class="top__card-thumb">
-                <div class="top__card-stats">
-                  <h3 class="top__card-title">
-                    OSAKA
-                  </h3>
-                  <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
-                  </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
+                    <div class="top__card">
+                      <div class="top__card-pic">
+                        <a href="#!" class="top__card-link"></a>
+                        <img src="./img/top-pic-3.jpg" alt="OSAKA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                          <h3 class="top__card-title">
+                            OSAKA
+                          </h3>
+                          <div class="top__card-likes">
+                            <span class="top__card-likes-value">221</span>
+                            <svg width="16" height="16" class="top__card-svg">
+                              <use xlink:href="img/sprite.svg#heart-ico" />
+                              </svg>
+                            </div>
+                            <div class="top__card-comments">
+                              <span class="top__card-comments-value">50</span>
+                              <svg width="14" height="14" class="top__card-svg">
+                                <use xlink:href="img/sprite.svg#comment-ico" />
+                                </svg>
+                              </div>
+                            </div>
+                          </div>
+                          <p class="top__card-desc">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                          </p>
+                          <a href="#!" class="top__card-more btn">SEE MORE</a>
+                        </div>
 
-            <div class="top__card">
-              <div class="top__card-pic">
-                <a href="#!" class="top__card-link"></a>
-                <img src="./img/top-pic-4.jpg" alt="SAITAMA" class="top__card-thumb">
-                <div class="top__card-stats">
-                  <h3 class="top__card-title">
-                    SAITAMA
-                  </h3>
-                  <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
-                  </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
+                        <div class="top__card">
+                          <div class="top__card-pic">
+                            <a href="#!" class="top__card-link"></a>
+                            <img src="./img/top-pic-4.jpg" alt="SAITAMA" class="top__card-thumb">
+                            <div class="top__card-stats">
+                              <h3 class="top__card-title">
+                                SAITAMA
+                              </h3>
+                              <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                                <svg width="16" height="16" class="top__card-svg">
+                                  <use xlink:href="img/sprite.svg#heart-ico" />
+                                  </svg>
+                                </div>
+                                <div class="top__card-comments">
+                                  <span class="top__card-comments-value">50</span>
+                                  <svg width="14" height="14" class="top__card-svg">
+                                    <use xlink:href="img/sprite.svg#comment-ico" />
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                              <p class="top__card-desc">
+                                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                              </p>
+                              <a href="#!" class="top__card-more btn">SEE MORE</a>
+                            </div>
 
-            <div class="top__card">
-              <div class="top__card-pic">
-                <a href="#!" class="top__card-link"></a>
-                <img src="./img/top-pic-5.jpg" alt="UENO" class="top__card-thumb">
-                <div class="top__card-stats">
-                  <h3 class="top__card-title">
-                    UENO
-                  </h3>
-                  <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
-                  </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
+                            <div class="top__card">
+                              <div class="top__card-pic">
+                                <a href="#!" class="top__card-link"></a>
+                                <img src="./img/top-pic-5.jpg" alt="UENO" class="top__card-thumb">
+                                <div class="top__card-stats">
+                                  <h3 class="top__card-title">
+                                    UENO
+                                  </h3>
+                                  <div class="top__card-likes">
+                                    <span class="top__card-likes-value">221</span>
+                                    <svg width="16" height="16" class="top__card-svg">
+                                      <use xlink:href="img/sprite.svg#heart-ico" />
+                                      </svg>
+                                    </div>
+                                    <div class="top__card-comments">
+                                      <span class="top__card-comments-value">50</span>
+                                      <svg width="14" height="14" class="top__card-svg">
+                                        <use xlink:href="img/sprite.svg#comment-ico" />
+                                        </svg>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <p class="top__card-desc">
+                                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                                  </p>
+                                  <a href="#!" class="top__card-more btn">SEE MORE</a>
+                                </div>
 
-            <div class="top__card">
-              <div class="top__card-pic">
-                <a href="#!" class="top__card-link"></a>
-                <img src="./img/top-pic-6.jpg" alt="SHIBUYA" class="top__card-thumb">
-                <div class="top__card-stats">
-                  <h3 class="top__card-title">
-                    SHIBUYA
-                  </h3>
-                  <div class="top__card-likes">
-                    <span class="top__card-likes-value">
-                      221
-                    </span>
-                  </div>
-                  <div class="top__card-comments">
-                    <span class="top__card-comments-value">
-                      50
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <p class="top__card-desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-              </p>
-              <a href="#!" class="top__card-more btn">SEE MORE</a>
-            </div>
-          </div>
-        </section>
+                                <div class="top__card">
+                                  <div class="top__card-pic">
+                                    <a href="#!" class="top__card-link"></a>
+                                    <img src="./img/top-pic-6.jpg" alt="SHIBUYA" class="top__card-thumb">
+                                    <div class="top__card-stats">
+                                      <h3 class="top__card-title">
+                                        SHIBUYA
+                                      </h3>
+                                      <div class="top__card-likes">
+                                        <span class="top__card-likes-value">221</span>
+                                        <svg width="16" height="16" class="top__card-svg">
+                                          <use xlink:href="img/sprite.svg#heart-ico" />
+                                          </svg>
+                                        </div>
+                                        <div class="top__card-comments">
+                                          <span class="top__card-comments-value">50</span>
+                                          <svg width="14" height="14" class="top__card-svg">
+                                            <use xlink:href="img/sprite.svg#comment-ico" />
+                                            </svg>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <p class="top__card-desc">
+                                        Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+                                      </p>
+                                      <a href="#!" class="top__card-more btn">SEE MORE</a>
+                                    </div>
+                                  </div>
+                                </section>
 
-      </main>
-      <include src="source/components/scripts.html"></include>
-    </body>
-  </html>
+                              </main>
+                              <include src="source/components/scripts.html"></include>
+                            </body>
+                          </html>
