--- a/source/main.html
+++ b/source/main.html
@@ -453,7 +453,7 @@
                                 <div class="videos" id="videos">
                                   <!-- <iframe class="video__element" src="https://www.youtube.com/embed/URDXZSJZ2ME" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                   <div class="video__item"></div>
-                                  <video class="video__element" loop="" muted="" autoplay="" poster="video/poster.jpg">
+                                  <video class="video__element" loop="" muted="" autoplay="" poster="video/poster.jpg" controls>
 
                                     <source src="video/videoHD.mp4" type="video/mp4">
                                     <source src="video/videoHD-webm.webm" type="video/webm">
