meta and favicons  realfavicongenerator

--- a/source/main.html
+++ b/source/main.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Amazing places in Japan!" />
+    <meta name="author" content="Travel agency" />
+    <meta itemprop="image" content="" />
+    <meta name="copyright" content="2019 Konopatova" />
+    <meta property="og:title" content="Discover Amazing places in Japan!" />
+    <meta property="og:locale" content="en_EN" />
+    <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="icon" href="favicon/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Discover Amazing places in Japan</title>
     <link href="css/style.min.css" rel="stylesheet" />
   </head>
