--- a/source/main.html
+++ b/source/main.html
@@ -66,7 +66,7 @@
         </div>
       </header>
       <main class="main">
-        <section class="intro">
+        <section class="intro" data-aos="slide-up" data-aos-delay="300">
           <div class="intro__slider swiper-container swiper-container--intro">
             <div class="intro__slider-wrapper swiper-wrapper">
               <div class="intro__img-wrapper swiper-slide">
@@ -105,7 +105,7 @@
             <div class="swiper-pagination"></div>
           </div>
 
-          <div class="intro__wrapper">
+          <div class="intro__wrapper" data-aos="slide-up" data-aos-delay="300">
             <div class="container">
               <h1 class="intro__title">
                 Discover Amazing places in Japan
@@ -128,7 +128,7 @@
           </div>
         </section>
 
-        <section class="benefits section-wrapper">
+        <section class="benefits section-wrapper" data-aos="slide-up" data-aos-delay="300">
           <div class="benefits__wrap">
             <h2 class="benefits__title">
               Benefits of Odigo
@@ -171,7 +171,7 @@
           </div>
         </section>
 
-        <section class="places section-wrapper">
+        <section class="places section-wrapper" data-aos="slide-up" data-aos-delay="300">
           <div class="places__caption">
             <h2 class="places__title section-title">
               Get inspired for your next trip
@@ -248,8 +248,8 @@
           </div>
         </section>
 
-        <section class="tours section-wrapper" id="articles">
-          <div class="tours__tour tour">
+        <section class="tours section-wrapper" data-aos="slide-up" data-aos-delay="300" id="articles">
+          <div class="tours__tour tour" data-aos="fade-right" data-aos-delay="100">
             <div class="tour__pic tour__pic--size_lg tour__card">
               <picture>
                 <source type="image/webp" media="(min-width: 960px)" srcset="img/tour01@1x.webp 1x, img/tour01@2x.webp 2x">
@@ -263,13 +263,14 @@
                 Prefecture in Focus: Tottori
               </h3>
               <p class="tour__desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child,
+                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the
+                child,
                 open the door,
               </p>
               <a href="#!" class="tour__more">VIEW PREFECTURE</a>
             </div>
           </div>
-          <div class="tours__tour tour">
+          <div class="tours__tour tour" data-aos="fade-left" data-aos-delay="100">
             <div class="tour__pic tour__pic--size_lg tour__card">
               <picture>
                 <source type="image/webp" media="(min-width: 960px)" srcset="img/tour02@1x.webp 1x, img/tour02@2x.webp 2x">
@@ -283,7 +284,8 @@
                 Featured Neighborhood: Kyoto’s Arashiyama
               </h3>
               <p class="tour__desc">
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child,
+                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the
+                child,
                 open the door,
               </p>
               <a href="#!" class="tour__more">VIEW PREFECTURE</a>
@@ -291,7 +293,7 @@
           </div>
         </section>
 
-        <section class="top section-wrapper" id="locations">
+        <section class="top section-wrapper" data-aos="slide-up" data-aos-delay="300" id="locations">
           <h2 class="top__title section-title">
             Today top places to visit </h2>
           <div class="top__cards">
@@ -467,7 +469,7 @@
                                   </div>
                                 </section>
 
-                                <div class="videos" id="videos">
+                                <div class="videos" data-aos="slide-up" data-aos-delay="200" id="videos">
                                   <!-- <iframe class="video__element" src="https://www.youtube.com/embed/URDXZSJZ2ME" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                   <div class="video__item"></div>
                                   <video class="video__element" loop="" muted="" autoplay="" poster="video/poster.jpg" controls>
@@ -478,6 +480,7 @@
                                   </video>
 
                                 </div>
+
 
                               </main>
 
