--- a/source/main.html
+++ b/source/main.html
@@ -116,7 +116,7 @@
                 this if i had the energy but under the bed, for attack the child, open the door...
               </p>
               <form class="search-form">
-                <fieldset class="serach-form__wrap">
+                <fieldset class="search-form__wrap">
                   <div class="search-form__info">
                     <input type="text" name="user-like-to-do" class="search-form__field" placeholder="What would you like to do?">
                     <input type="text" name="user-like-to-do" class="search-form__field" placeholder="Where would you like to go?">
@@ -471,8 +471,8 @@
 
                                 <div class="videos" data-aos="slide-up" data-aos-delay="200" id="videos">
                                   <!-- <iframe class="video__element" src="https://www.youtube.com/embed/URDXZSJZ2ME" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                                  <div class="video__item"></div>
-                                  <video class="video__element" loop="" muted="" autoplay="" poster="video/poster.jpg" controls>
+                                  <div class="videos__item"></div>
+                                  <video class="videos__element" loop="" muted="" autoplay="" poster="video/poster.jpg" controls>
 
                                     <source src="video/videoHD.mp4" type="video/mp4">
                                     <source src="video/videoHD-webm.webm" type="video/webm">
